Fix league icon and #about on mobiles

--- a/styles/main.css
+++ b/styles/main.css
@@ -354,9 +354,17 @@ select, select option {
   }
 }
 
+#about {
+  font-size: 0.8em;
+}
+
 @media (max-width: 900px) {
   #leaderboard-container table {
     width: 100%!important;
+  }
+
+  #leaderboard-container td div {
+    width: 85px;
   }
 
   #logo {
